Отмена правки 82359, сделанной [[Special:Contributions/Hunter903|Hunter903]] ([[User talk:Hunter903|обсуждение]])

--- a/Вармань_чиньжарамо.mw
+++ b/Вармань_чиньжарамо.mw
@@ -7,14 +7,14 @@
 |subregnum = 
 |regnum =
 |раздел =
-|superphylum =bhjn mbnm
+|superphylum =
 |phylum = 
 |subphylum =
 |superdivisio =
 |divisio =
 |subdivisio = 
 |superclassis =
-|classis = hjbnm
+|classis = 
 |subclassis =
 |infraclassis =
 |superordo =
