--- a/Моро_Артур.mw
+++ b/Моро_Артур.mw
@@ -56,7 +56,8 @@
 [[1997 ие]]стэ лись сонзэ романозо «Степан Эрьзя». СССР-нь Сёрмадеень вейсендявксов совиця 1935 иестэ. Мордовиянь заслуженной валморозей (1969 ие).
 Кулось  [[1989 ие]]нь [[якшамковонь 13 чи]]стэ Московсо. 
 
-Калмазь тиринь велесэ Якстере Лисьмапрят.
+Калмазь тиринь велесэ — Якстере Лисьмапрясо.
+
 == Сёрм.: ==
 <references />
 
