--- a/Обран.mw
+++ b/Обран.mw
@@ -1,6 +1,6 @@
 {{Таксономиясь
 | name = Обран
-| image file =
+| image file =7 Walross 1999.jpg
 | regnum = Ракшат
 | phylum = [[Хордовоень]]
 | subphylum = [[Позвоночные]]
