*Empty MediaWiki Message*

--- a/Сеель.mw
+++ b/Сеель.mw
@@ -1,5 +1,16 @@
-[[Артовкс:Igel.JPG|thumb|right|250px|Сеель]]
-
+{{Таксономиясь
+| name = Обран
+| image file =Igel.JPG
+| regnum = Ракшат
+| phylum = [[Хордовоень]]
+| subphylum = [[Позвоночные]]
+| classis = [[Ловсотрицят]]
+| infraclassis = [[Плацентарные]]
+| familia = ''Обранонь''
+| genus = ''Сеель''
+| species = Сеель
+| latin = {{Btname|Erinaceidae G. Fischer, 1814}}
+}}
 '''Се́ель''' — те ракша.
 
 == Содамоёвкст ==
