*Empty MediaWiki Message*

--- a/Ташто_Майнань_буе.mw
+++ b/Ташто_Майнань_буе.mw
@@ -1,7 +1,7 @@
 {{Регион
  | Цвет1                          = {{Цвет|Россия}}
  | Эрзянь лем                     = Ташто Майнань буе
- | Эсьлем                         = {{lang-ru|}}
+ | Эсьлем                         = {{lang-ru|Старомайнский район}}
  | Герб                           = 
  | Коцт                           = 
  | Гимн                           = 
@@ -17,14 +17,14 @@
  | Статус                         = 
  | Ашти                           = [[Ульянонь ёнкс]]со
  | Включает                       = 
- | Прявтош                        = 
+ | Прявтош                        = [[Ташто Майна (Ульянонь ёнкс)|Ташто Майна]] <abbr title="ошонь кондямо од веле">оков</abbr>
  | Образование                    = 
  | Упразднение                    = 
 |Глава                            = 
   |Название главы                  = 
  |Глава2                           = 
   |Название главы2                 = Администрациянь прявт
- | Карта                          = 
+ | Карта                          = Staromaynsky Raion of Ulyanovsk Oblast.png
  | Размер карты                   = 
  | Карта административной единицы = 
  | Размер карты ае                = 
@@ -36,13 +36,16 @@
  | Почтовые индексы               = 
  | Интернет-домен                 = 
  | Код автомобильных номеров      =
- | Сайт                           = 
+ | Сайт                           = http://stmaina.ru/
  | Категория в Commons            = 
  | Примечания                     = 
  | Название параметра1            = [[ОКАТО]]
  | Параметр1                      = {{ОКАТО|}}
 }}
-'''Ташто Майнань буе''' — [[Ульянонь ёнкс|Ульянонь ёнксонь]] буесь. Прявтошось — [[Ташто Майна]]. Буень масторонь покшолмазо 2044,1 вп². Эрицятнеде — 19,9 тёжат, [[эрзят]] 3 %, [[рузт]] 77 %, [[печкаст]] 9 %, [[ветькеть]] 8 %.
+'''Ташто Майнань буе''' — [[Ульянонь ёнкс|Ульянонь ёнксонь]] буесь. Прявтошось — [[Ташто Майна (Ульянонь ёнкс)|Ташто Майна]] <abbr title="ошонь кондямо од веле">оков</abbr>. Буень масторонь покшолмазо 2044,1 вп². Эрицятнеде — 19,9 тёжат, [[эрзят]] 3 %, [[рузт]] 77 %, [[печкаст]] 9 %, [[ветькеть]] 8 %.
+
+== Сёрм. ==
+<references />
 
 {{Ульянонь ёнксонь буетне}}
 
