*Empty MediaWiki Message*

--- a/Сеель.mw
+++ b/Сеель.mw
@@ -11,7 +11,7 @@
 | species = Сеель
 | latin = {{Btname|Erinaceidae G. Fischer, 1814}}
 }}
-'''Се́ель''' — те ракша.
+'''Се́ель''' ({{Lang-la|Erinaceus europaeus}}) — те ракша.
 
 == Содамоёвкст ==
 * Салмуксов кире<br />Вирьга кевери.
