*Empty MediaWiki Message*

--- a/Копёр.mw
+++ b/Копёр.mw
@@ -14,7 +14,7 @@
  | commons           = Category:Anethum graveolens
  | grin              = 670
  }}
-'''Копёр''' (лат. ''Anethum graveolens'') Те ве иень касовкстнэде.
+'''Копёр''' ({{Lang-la|Anethum graveolens}}) Те ве иень касовкстнэде.
 
 [[Категория:Ярсамо тикшеть|К]]
 [[Категория:Тикшеть|К]]
