*Empty MediaWiki Message*

--- a/Кортамо:Пусмопря_сапоньундокс.mw
+++ b/Кортамо:Пусмопря_сапоньундокс.mw
@@ -8,5 +8,5 @@
 * ({{Lang-ru|Качим степной}}) — '''чаво таркань сапоньундокс'''<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}},{{ref-myv}}</ref> ({{Lang-la|Gypsophila muralis L.}})
 * ({{Lang-ru|Качим метельчатый}}) — '''пусмопря сапоньундокс'''<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}},{{ref-myv}}</ref> ({{Lang-la|Gypsophila paniculata}})
 
-==Лисьм,:==
+==Лисьм.:==
 <references />
