--- a/Пусмопря_сапоньундокс.mw
+++ b/Пусмопря_сапоньундокс.mw
@@ -1,6 +1,5 @@
-
 {{Таксономиясь
-|name = Вармань крандаз
+|name = Пусмопря сапоньундокс
 |latin = Gypsophila paniculata
 |image file =   Gypsophila paniculata.jpg
 |image_caption = ''Gypsophila paniculata''
@@ -15,16 +14,17 @@
 |binomial = ''Gypsophila paniculata''
 |binomial_authority = [[Carl Linnaeus|L.]]
 }}
-'''Вармань крандаз''' ({{Lang-la|Gypsophila paniculata}}, {{Lang-ru|Качим метельчатый}}) — вейке иень перть касыця тикше. Гвоздикань семиянь. 
+'''Пусмопря сапоньундокс<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}},{{ref-myv}}</ref>''' ({{Lang-la|Gypsophila paniculata}}, {{Lang-ru|Качим метельчатый}}) — вейке иень перть касыця тикше. Гвоздикань семиянь. 
 
 Тикшенть ундоксозо [[1 (ловома вал)|вейке]], вишкине. Сонсь тикшесь пек рацяня, прок шар. Лопанзо овсе вишкинеть, цецянзо [[ашо|ашолат]]. Зярдо видьмензэ кенерить, весе курось сезеви ундокстонть, ды вармась пуви эйсэнзэ лия таркав. Курось кеверезь кевери. Кассы степсэ. Ловови ормадо лезэв тикшекс.
 
 
 == Тикшень лемтне ==
 [[Ицял буе|Ицял буень]] [[Полдаська (Ицял буе)|Полдаська]] велесэ мерить тензэ '''''вармань шалаж'''''.
+Лиякс мерить '''вармань крандаз<ref name="Тикшень валкс">Р.Н. Бузакова. Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2., {{ref-ru}},{{ref-myv}}</ref>'''.
 
-== Сёрм.: ==
-* Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2
+==Лисьм.:==
+<references />
 
-[[Категория:Тикшеть|В]]
-[[Категория:Ормадо лезэвть|В]]
+[[Категория:Тикшеть|П]]
+[[Категория:Ормадо лезэвть|П]]
