поладыять седе ламосто

--- a/Копёр.mw
+++ b/Копёр.mw
@@ -14,7 +14,30 @@
  | commons           = Category:Anethum graveolens
  | grin              = 670
  }}
-'''Копёр''' ({{Lang-la|Anethum graveolens}}) Те ве иень касовкстнэде.
+'''Копёр<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}},{{ref-myv}}</ref>''' ({{Lang-la|Anethum graveolens}}, {{lang-ru| ''Укроп''}}) — те ве иень [[тикше]]нь касовкс Зонтичноень семиястонть (''Umbellíferae''). 
+
+[[Вирь]]га касы [[Лембе ёнкс|лембе]]-[[чивалгома]] ды куншкатаркань Азиява; кода пирень тикше касы эрьва-кува. 
+
+
+== Чачозо-покшолмазо ==
+Тикшесь виев тантей чине марто. Нетьксэсь вейке, видэв, тарад марто, сэрьсэ 40—150 см, чопуда-пиже. 
+
+== Тикшень лемтне ==
+* ({{Lang-lat|Anethum graveolens L. }}, {{lang-ru| ''Укроп пахучий, или огородный''}})  - '''''[[пирень копёр]]'''''<ref name="Русско-эрзянский ботанический"/>. 
+
+== Содамоёвкст ==
+
+== Фотокувт ==
+<gallery>
+File:Illustration Anethum graveolens clean.jpg|left|ш=225|Ботаникань артовкс
+File:Anethum graveolens20090812 475.jpg|Цецянь пурнавкс
+File:Anethum graveolens20090812 480.jpg|Цецятне покшсто
+File:Anethum graveolens seeds.JPG|Видьметь
+</gallery>
+
+
+==Лисьмапря==
+<references />
 
 [[Категория:Ярсамо тикшеть|К]]
 [[Категория:Тикшеть|К]]
