--- a/Покш_кирмалав.mw
+++ b/Покш_кирмалав.mw
@@ -23,6 +23,40 @@
  |wikispecies       = Arctium lappa
  |grin              = 3857
 }}
-'''Кирмалав''' ({{lang-la|Polygonum aviculare}}) — покш ламоиень астрань буестэ [[касыкс]]. Касы ломань удалксонь вакссо: кинь вакссо, пиресэ, паксясо. 
+'''Кирмалав<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}}, {{ref-myv}}</ref>''', лиякс мерить: '''рукшна лопа<ref name="Русско-эрзянский ботанический"/>''' ({{lang-la|Árctium}}, {{lang-ru| ''Лопух'', или ''репейник''}}) — покш ламоиень [[касыкс]] Астрань семиястонть (Asteráceae). Касы [[ломань]] удалксонь вакссо: [[ки]]нь вакссо, [[пире]]сэ, [[пакся]]со. Весемекс буесэнть 20 видт, ламотне лововить [[Ормат|ормадо]] лезэв [[тикше]]кс. 
+
+== Лемесь ==
+Буенть лемесь латинэнь кельсэ ''Arctium'', саеви латинэкс човорязь грекекс кирмалавонть лемстэнть — {{lang-el|arcion}}, эли {{lang-el2|arceion}}<ref name="ФСССР">Юзепчук С. В., Сергиевская Е. В. Лопух — Arctium // Флора СССР / Ботанический институт имени В. Л. Комарова Академии наук СССР; Начато под руководством и под главной редакцией акад. В. Л. Комарова; Редакторы тома Б. К. Шишкин и Е. Г. Бобров. — М.—Л.: Изд-во Академии наук СССР, 1962. — Т. XXVII. — С. 93—107. {{ref-ru}}</ref>, или {{lang-el2|arktion}}<ref name="БФС">[http://herba.msu.ru/shipunov/school/books/botaniko-farmakognost_slovar1990.djvu Ботанико-фармакогностический словарь]: Справ. пособие / К. Ф. Блинова, Н. А. Борисова, Г. Б. Гортинский и др.; Под ред. К. Ф. Блиновой, Г. П. Яковлева. — М.: Высш. шк., 1990. — С. 207. — ISBN 5-06000085-0. {{ref-ru}}</ref>, конань васенцеде ледсти [[Диоскорид]] эсензэ сёрмадовксонзо.
+
+Кода сёрмады [[Фасмер, Макс|Макс Фасмер]], рузонь валось ''лопух'' (эли ''лапу́х''), истяня малавикссэть тензэ славянонь тикшень лемтне, конататнень улить келей лопаст, — {{lang-uk|лопу́х}}, {{lang-be|лопу́х}}, {{lang-bg|ло́пуш}}, {{lang-sh|ло̀пух}}, {{lang-sl|lopúh}}, {{lang-cs|lopuch, lopouch}}, {{lang-pl|łopuch, łopian}} — малавикст {{lang-lt|lãpas}}«лист» валонтень. Эрзякс '''лопа''' валось тензэ малавикс. Теде башка, Фасмер невти малавиксэнть ''лопата'' ды ''лапа'' валтнень<ref name="vasmer-lopuh">[http://starling.rinet.ru/cgi-bin/response.cgi?root=%2Fusr%2Flocal%2Fshare%2Fstarling%2Fmorpho&basename=morpho\vasmer\vasmer&first=1&text_word=лопух&method_word=beginning&ww_word=on&ic_word=on&sort=word&encoding=utf-rus лопух ]// Этимологический словарь русского языка = Russisches etymologisches Wörterbuch : в 4 т. / авт.-сост. М. Фасмер ; пер. с нем. и доп. чл.‑кор. АН СССР О. Н. Трубачёва, под ред. и с предисл. проф. {{ref-ru}} </ref> ''лопух'' валонтень.
+
+== Чачозо-покшолмазо ==
+Сех покш кирмалавтнеде — '''''покш кирмалав''''', сонзэ сэрезэ ульни 3 м<ref>[http://www.efloras.org/florataxon.aspx?flora_id=1&taxon_id=200023153 ''Arctium lappa''] // Flora of North America.{{ref-en}}</ref> видс.
+
+Ундоксось 1,5 м кувалмосо. Лопанзо покшт (40 см видс)<ref name="ФСССР"/>.
+
+== Тикшень лемтне ==
+* ({{Lang-lat|Arctium lappa L.}}, {{lang-ru| ''Лопух большой''}})  - '''''[[покш кирмалав]]'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Аrctium nemorosum Lej.}}, {{lang-ru| ''Лопух лесной''}})  - '''''[[вирень кирмалав]]'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Аrctium mínus}}, {{lang-ru| ''Лопух малый''}})  - '''''[[вишкине кирмалав]]'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Arctium tomentosum Mill.}}, {{lang-ru| ''Лопух паутинистый''}})  - '''''[[шанжавкоцтонь кирмалав]]'''''<ref name="Русско-эрзянский ботанический"/>. 
+
+
+== Содамоёвкст ==
+
+== Фотокувт ==
+<gallery>
+File:4 Arctium tomentosum.jpg|left|ш=225|Ботаникань артовкс
+File:Greater burdock 2005 G1.jpg|''[[Arctium lappa]]''
+File:Arctium minus flores.jpg|''[[Arctium minus]]''
+File:Arctium tomentosum20140704 368.jpg|''[[Arctium tomentosum]]''
+</gallery>
+
+
+==Лисьмапря==
+<references />
+
+
 
 [[Категория:Тикшеть|К]]
+[[Категория:Ормадо лезэвть|К]]
