--- a/Маразь.mw
+++ b/Маразь.mw
@@ -1,5 +1,5 @@
 {{Таксономиясь
-|name = ''Маразь''
+|name = ''Маразь, укшторо''
 |latin =Ácer
 | image file  = Acer pseudoplatanus 002.jpg
 |image_caption = ''[[Acer pseudoplatanus]]'' (sycamore maple) foliage
@@ -19,7 +19,7 @@
 
 |}}
 
-'''Маразь''' ({{Lang-la|Maple}}, {{Lang-ru|Клён}}) — те [[чувтт|чувто]].
+'''Маразь, укшторо''' ({{Lang-la|Maple}}, {{Lang-ru|Клён}}) — те [[чувтт|чувто]].
 ==  Лисьмапря ==
 <references />
 
