--- a/Уфань_буе.mw
+++ b/Уфань_буе.mw
@@ -1,1 +1,45 @@
+{{Регион
+ | Цвет1                          = {{Цвет|Россия}}
+ | Эрзянь лем                     = Уфань буе
+ | Эсьлем                         = {{lang-ba|Өфө районы}}
+ | Герб                           = 
+ | Коцт                           = 
+ | Гимн                           = 
+ | Мастор                         = {{RUS}}
+ | lat_dir                        = 
+ | lat_deg                        = 54|lat_min = 36|lat_sec =
+ | lon_dir                        = 
+ | lon_deg                        = 53|lon_min = 42|lon_sec =
+ | region                         = 
+ | type                           = 
+ | уровень                        = 
+ | CoordScale                     = 
+ | Статус                         = [[Муниципальной буе]]
+ | Ашти                           = [[Башкирия Республикась|Башкириясо]]
+ | Включает                       = 19 велень администрацият
+ | Прявтош                        =  
+ | Образование                    = [[1930 ие]]
+ | Упразднение                    = 
+|Глава                            = 
+  |Название главы                  = 
+ |Глава2                           = 
+  |Название главы2                 = Глава муниципального образования
+ | Карта                          = Location of Ufimskiy rayon (Bashkortostan).svg
+ | Размер карты                   = 
+ | Карта административной единицы = 
+ | Размер карты ае                = 
+ | Часовой пояс                   = {{MSK+2}}
+ | Аббревиатура                   = 
+ | ISO                            = 
+ | FIPS                           = 
+ | Телефонный код                 = 347
+ | Почтовые индексы               = 4527ХХ 
+ | Интернет-домен                 = 
+ | Код автомобильных номеров      = 02, 102
+ | Сайт                           = https://ufim.bashkortostan.ru/
+ | Категория в Commons            = 
+ | Примечания                     = 
+ | Название параметра1            = [[ОКАТО]]
+ | Параметр1                      = {{ОКАТО|}}
+}}
 '''Уфань буе''' ({{lang-ru|Уфимский район}}, {{lang-ba|Өфө районы}}) — те муниципальной буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]].
