--- a/Уфань_буе.mw
+++ b/Уфань_буе.mw
@@ -43,3 +43,5 @@
  | Параметр1                      = {{ОКАТО|}}
 }}
 '''Уфань буе''' ({{lang-ru|Уфимский район}}, {{lang-ba|Өфө районы}}) — те муниципальной буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]].
+
+[[Category:Уфань буе|*]]
