--- a/Маразь.mw
+++ b/Маразь.mw
@@ -8,7 +8,7 @@
 |unranked_classis = [[Eudicots]]
 |unranked_ordo = [[Rosids]]
 |ordo = [[Sapindales]]
-|familia = [[Sapindaceae]]<ref>Stevens, P. F. (2001 onwards). Angiosperm Phylogeny Website. Version 9, June 2008 [and more or less continuously updated since]. http://www.mobot.org/MOBOT/research/APweb/.</ref> (previously [[Aceraceae]])
+|familia = [[Sapindaceae]]<ref name="Stevens, P. F">[http://www.mobot.org/MOBOT/research/APweb/ Stevens, P. F. (2001 onwards). Angiosperm Phylogeny Website. Version 9, June 2008 [and more or less continuously updated since].{{ref-en}} </ref> (previously [[Aceraceae]])
 |subfamilia = [[Hippocastanoideae]]
 |genus = '''''Acer'''''
 |genus_authority = [[Carl Linnaeus|L.]]
@@ -16,10 +16,29 @@
 |range_map_caption = Distribution
 |subdivision_ranks = Species
 |subdivision = See either <br>[[List of Acer species|species grouped by sections]]<br>[[List of Acer species alphabetical|alphabetical list of species]]
-
 |}}
 
-'''Маразь, укшторо''' ({{Lang-la|Maple}}, {{Lang-ru|Клён}}) — те [[чувтт|чувто]].
+'''Укштор<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}}, {{ref-myv}}</ref>''', лиякс мерить: '''Маразь''' ({{Lang-la|Ácer}}, {{Lang-ru|Клён}}) — те буе [[чувтт|чувтонь]] ды [[куркш]]онь [[касыкс]]т Сапиндовонь семиястонть (''Sapindaceae''<ref name="Stevens, P. F"/>). Икеле ульнесь  Укшторонь семиясонть (''Aceraceae''), неень шкасто совавтови Конскокаштановой семияалксонть (''Hippocastanoideae''). Келестэ касы Европасо, Азиява ды Пелевекс Америкасо.
+
+== Тикшень лемтне ==
+* ({{Lang-lat|Acer negundo L.}}, {{lang-ru| ''Клён ясенелистный, или американский''}})  - '''''[[сиртлопань укштор]]''''', эли '''''американь укштор'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Acer tataricum L.}}, {{lang-ru| ''Клён татарский, или черноклен''}})  - '''''[[татаронь  укштор]]''''', эли '''''раужо укштор'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Acer platanoides L.}}, {{lang-ru| ''Клён татановидный'', или ''Клён остролистный'', или ''Клён платаноли́стный''}})  - '''''[[платанонь кондямо укштор]]'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Асегасеае}}, {{lang-ru| ''Кленовые''}})  - '''''[[укшторонсетнень раськесь]]'''''<ref name="Русско-эрзянский ботанический"/>. 
+
+== Содамоёвкст ==
+
+== Фотокувт ==
+<gallery>
+File:Maple-oliv1.jpg|Платанонь кондямо укштор
+File:Maple leaves.jpg|Лопанзо ''[[Acer pseudoplatanus]]'' (Ашо укшторо)
+File:Acer platanoides3.jpg|[[Платанонь кондямо укштор]] [[тундо|тунда]]. [[Москов]]
+File:Maple-oliv2.jpg|[[Платанонь кондямо укштор]] [[сёксь|сёксня]]
+File:TenryujiMomiji.jpg|Укшторонь ды бамбуконь касовкст [[Япония Мастор|Япониясо]]
+File:Bi-colored Maple Tree.jpg|[[Acer grandidentatum]]
+</gallery>
+
+
 ==  Лисьмапря ==
 <references />
 
