--- a/Уфань_буе.mw
+++ b/Уфань_буе.mw
@@ -42,7 +42,7 @@
  | Название параметра1            = [[ОКАТО]]
  | Параметр1                      = {{ОКАТО|}}
 }}
-'''Уфань буе''' ({{lang-ru|Уфимский район}}, {{lang-ba|Өфө районы}}) — те муниципальной буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]].
+'''Уфань буе''' ({{lang-ru|Уфимский район}}, {{lang-ba|Өфө районы}}) — те муниципальной буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]].  Куншка таркась - [[Уфа ош]].
 == Эриця раськеть==
 
 
