*Empty MediaWiki Message*

--- a/Маразь.mw
+++ b/Маразь.mw
@@ -18,7 +18,7 @@
 |subdivision = See either <br>[[List of Acer species|species grouped by sections]]<br>[[List of Acer species alphabetical|alphabetical list of species]]
 |}}
 
-'''Укштор<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}}, {{ref-myv}}</ref>''', лиякс мерить: '''Маразь'''<ref>Этимологический словарь мордовских (эрзянского и мокшанского) языков. Том II. Йошкао-Ола. 2005 [https://my.pcloud.com/publink/show?code=eqpotalK] </ref> ({{Lang-la|Ácer}}, {{Lang-ru|Клён}}) — те буе [[чувтт|чувтонь]] ды [[куркш]]онь [[касыкс]]т Сапиндовонь семиястонть (''Sapindaceae''<ref name="Stevens, P. F"/>). Икеле ульнесь  Укшторонь семиясонть (''Aceraceae''), неень шкасто совавтови Конскокаштановой семияалксонть (''Hippocastanoideae''). Келестэ касы Европасо, Азиява ды Пелевекс Америкасо.
+'''Укштор<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}}, {{ref-myv}}</ref>''', лиякс мерить: '''Маразь'''<ref>Вершинин В.И. Этимологический словарь мордовских (эрзянского и мокшанского) языков. Том II. Йошкао-Ола. 2005 [https://my.pcloud.com/publink/show?code=eqpotalK] </ref> ({{Lang-la|Ácer}}, {{Lang-ru|Клён}}) — те буе [[чувтт|чувтонь]] ды [[куркш]]онь [[касыкс]]т Сапиндовонь семиястонть (''Sapindaceae''<ref name="Stevens, P. F"/>). Икеле ульнесь  Укшторонь семиясонть (''Aceraceae''), неень шкасто совавтови Конскокаштановой семияалксонть (''Hippocastanoideae''). Келестэ касы Европасо, Азиява ды Пелевекс Америкасо.
 
 == Тикшень лемтне ==
 * ({{Lang-lat|Acer negundo L.}}, {{lang-ru| ''Клён ясенелистный, или американский''}})  - '''''[[сиртлопань укштор]]''''', эли '''''американь укштор'''''<ref name="Русско-эрзянский ботанический"/>. 
