*Empty MediaWiki Message*

--- a/Карелэнь_Республикась.mw
+++ b/Карелэнь_Республикась.mw
@@ -29,8 +29,8 @@ MSKS=0|
 
 == Карелэнь масторпелькстне ==
 === Ошонь кужомастортнэ ===
-* [[Петроскоень кужомастор]]
-* [[Костомукшань кужомастор]]
+* [[Петроскоень ошкужо]]
+* [[Костомукшань ошкужо]]
 === Буетне ===
 * [[Беломорскоень буе (Карелия)|Беломорскоень]]
 * [[Калевалань буе (Карелия)|Калевалань]]
