--- a/Карелэнь_Республикась.mw
+++ b/Карелэнь_Республикась.mw
@@ -29,8 +29,8 @@ MSKS=0|
 
 == Карелэнь масторпелькстне ==
 === Ошонь кужомастортнэ ===
-* [[Петроскоень ошкужо]]
-* [[Костомукшань ошкужо]]
+* [[Петроскоень кужомастор|Петроскоень ошкужо]]
+* [[Костомукшань кужомастор|Костомукшань ошкужо]]
 === Буетне ===
 * [[Беломорскоень буе (Карелия)|Беломорскоень]]
 * [[Калевалань буе (Карелия)|Калевалань]]
