*Empty MediaWiki Message*

--- a/Вокнаволок_веле.mw
+++ b/Вокнаволок_веле.mw
@@ -61,6 +61,14 @@
 }}
 '''Вокнаволок веле''' ({{lang-krl|Vuokkiniemi}}, {{Lang-ru|с. Вокнаволок}}) — те [[карелэть|карелэнь]] веле [[Карелэнь Республикась|Карелэнь Республикань]] [[Костомукшань кужомастор|Костомукшань ошонь кужомасторсо]].
 
+== Веледенть ==
+Ашти [[Лембе ёнкс|лембе]]-[[чивалгома]]нь ёнкссо [[Верце Куйто эрьке]]нть эйстэ,  59 [[Вайгельпе|вп]] автоардомаванть [[Костомукша ош]]сто.
+Велесь историянь ды шкинемань памятник, кона ашти Костомукшань ошонь кужомасторонть модасо<ref>[http://monuments.karelia.ru/ob-ekty-kul-turnogo-nasledija/spiski-ob-ektov-kul-turnogo-nasledija-po-rajonam-i-poselenijam-respubliki-karelija/g-kostomuksha/ Объекты культурного наследия на территории Костомукшского городского округа]{{ref-ru}}</ref>
+
+Вокнаволок — васенце эрямо тарка [[Костомукша ош]]стонть [[Виэна Карелия|Виэнань Карелиянть]] марто, конасонть эрить карелэнь раськесь. 90 %  седе ламо велесэнть эрицятнеде  [[карелэть]].
+
+Содави, кода рунаньморыця веле, кона сюлмавозь [[Лённрот Элиас]] марто, сон тесэ сёрмадынзе Перттуненэнь рунатнень.
+
 == Веленть лемденть  ==
 
 == Содавикс ломанть те велестэнть ==
@@ -69,7 +77,6 @@
 
 ==Веленть эрямозо==
 2017 иестэ Вокнаволок велесь теевсь «Шкинемань суоми-угрань мирэнь прявтошокс»<ref>[http://erzyaks.ru/myv/vuokkiniemi-shkineman-suomi-ugran-miren-pryavtosh-2017-ient-panzhoma/ «Вуоккиниеми — Шкинемань суоми-угрань мирэнь прявтош 2017» иенть панжома] {{ref-myv}}</ref>
-
 == Фотокувт ==
 <gallery>
 File:Vuokkiniemi Finno-Ugric Capital of Culture 2017 01 07 Kataja folklore group.jpg|«Катая» фол-кужось, ловновы «Калевала» морокерькстэнть пелькс. 2017 ие якшамковонь 7 чи
