--- a/Вокнаволок_веле.mw
+++ b/Вокнаволок_веле.mw
@@ -76,7 +76,7 @@
 
 
 ==Веленть эрямозо==
-2017 иестэ Вокнаволок велесь теевсь «Шкинемань суоми-угрань мирэнь прявтошокс»<ref>[http://erzyaks.ru/myv/vuokkiniemi-shkineman-suomi-ugran-miren-pryavtosh-2017-ient-panzhoma/ «Вуоккиниеми — Шкинемань суоми-угрань мирэнь прявтош 2017» иенть панжома] {{ref-myv}}</ref>
+2017 иестэ Вокнаволок велесь теевсь «Шкинемань суоми-угрань мирэнь прявтошокс»<ref>[http://erzyaks.ru/myv/vuokkiniemi-shkineman-suomi-ugran-miren-pryavtosh-2017-ient-panzhoma/ «Вуоккиниеми — Шкинемань суоми-угрань мирэнь прявтош 2017» иенть панжома] {{ref-myv}}</ref><ref name="Viestit-Karjala">[http://tv-karelia.ru/vuokkiniemi-on-suomi-ugrilaine-kul-tuurukyla/ Viestit-Karjala: Vuokkiniemi on suomi-ugrilaine kul’tuurukylä (video)] {{ref-krl}}</ref>
 == Фотокувт ==
 <gallery>
 File:Vuokkiniemi Finno-Ugric Capital of Culture 2017 01 07 Kataja folklore group.jpg|«Катая» фол-кужось, ловновы «Калевала» морокерькстэнть пелькс. 2017 ие якшамковонь 7 чи
@@ -101,7 +101,6 @@ File:Vuokkiniemi Finno-Ugric Capital of Culture 2017 01 07 Karelian Museum exhib
 File:Vuokkiniemi Finno-Ugric Capital of Culture 20170107 Karelian Museum exhibition3.jpg|Карелэнь музей Велень Кудосо.
 File:Vuokkiniemi Finno-Ugric Capital of Culture 2017 01 07 Karelian Museum exhibition2.jpg|Карелэнь музей Велень Кудосо.
 File:Vuokkiniemi Finno-Ugric Capital of Culture 2017 01 07 Karelian Museum exhibition4.jpg|Карелэнь музей Велень Кудосо.
-
 </gallery>
 
 == Лисьм.: ==
