--- a/Вокнаволок_веле.mw
+++ b/Вокнаволок_веле.mw
@@ -59,15 +59,16 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Вокнаволок веле''' ({{lang-krl|Vuokkiniemi}}, {{Lang-ru|с. Вокнаволок}}) — те [[карелэть|карелэнь]] веле [[Карелэнь Республикась|Карелэнь Республикань]] [[Костомукшань кужомастор|Костомукшань ошонь кужомасторсо]].
+'''Вокнаволок веле''' ({{lang-krl|Vuokkiniemi<ref name=" Н. Н. Мамонтова">[http://csl.isc.irk.ru/BD/Books/Межкультурные.pdf  Н. Н. Мамонтова. К вопросу о нормализации карельских
+и русских географических названий Карелии. // Межкультурные взаимодействия в полиэтничном пространстве погра- ничного региона: Сборник материалов международной научной конференции. Петрозаводск, 2005. 416 с., стр. 349  ISBN 5-9274-0188-0] {{ref-ru}}</ref>}}, {{Lang-ru|с. Вокнаволок}}) — те [[карелэть|карелэнь]] веле [[Костомукшань кужомастор|Костомукшань ошонь кужомасторсо]], [[Карелэнь Республикась|Карелэнь Республикань]].
 
 == Веледенть ==
-Ашти [[Лембе ёнкс|лембе]]-[[чивалгома]]нь ёнкссо [[Верце Куйто эрьке]]нть эйстэ,  59 [[Вайгельпе|вп]] автоардомаванть [[Костомукша ош]]сто.
-Велесь историянь ды шкинемань памятник, кона ашти Костомукшань ошонь кужомасторонть модасо<ref>[http://monuments.karelia.ru/ob-ekty-kul-turnogo-nasledija/spiski-ob-ektov-kul-turnogo-nasledija-po-rajonam-i-poselenijam-respubliki-karelija/g-kostomuksha/ Объекты культурного наследия на территории Костомукшского городского округа]{{ref-ru}}</ref>
+Ашти [[Лембе ёнкс|лембе]]-[[чивалгома]]нь ёнкссо [[Верце Куйтто эрьке]]нть эйстэ,  59 [[Вайгельпе|вп]] автоардомаванть [[Костомукша ош]]сто.
+Велесь историянь ды шкинемань памятник, кона ашти Костомукшань ошонь кужомасторонть модасо<ref>[http://monuments.karelia.ru/ob-ekty-kul-turnogo-nasledija/spiski-ob-ektov-kul-turnogo-nasledija-po-rajonam-i-poselenijam-respubliki-karelija/g-kostomuksha/ Объекты культурного наследия на территории Костомукшского городского округа]{{ref-ru}}</ref>. Вуоккиниеми (Vuokkiniemi) веленть марто сюлмазь велетне: ''Kaskol’a'', ''Remšula'', ''Kyyrölä'', ''Lippol’a''<ref name="О. Л. Карлова">[http://www.ruslang.ru/doc/onomastica/onomastica4text.pdf ВОПРОСЫ ОНОМАСТИКИ 2007. No4. О. Л. Карлова. АРЕАЛЬНАЯ ДИСТРИБУЦИЯ -L-ОВОЙ ТОПОНИМИЧЕСКОЙ МОДЕЛИ НА ТЕРРИТОРИИ КАРЕЛИИ] {{ref-ru}}</ref>.
 
 Вокнаволок — васенце эрямо тарка [[Костомукша ош]]стонть [[Виэна Карелия|Виэнань Карелиянть]] марто, конасонть эрить карелэнь раськесь. 90 %  седе ламо велесэнть эрицятнеде  [[карелэть]].
 
-Содави, кода рунаньморыця веле, кона сюлмавозь [[Лённрот Элиас]] марто, сон тесэ сёрмадынзе Перттуненэнь рунатнень.
+Содави, кода '''рунаньморыця веле''', кона сюлмавозь [[Лённрот Элиас]] марто, сон тесэ сёрмадынзе<ref name="PTZGOVORIT">[https://ptzgovorit.ru/content/o-chem-poet-voknavolok PTZGOVORIT: О чем поет Вокнаволок] {{ref-ru}}</ref> Перттуненэнь Архиппэнь<ref name="«Республика»"/> рунатнень ([[4 (ловома вал)|ниле]] [[тёжа]] валморонь кикст<ref name="«Республика»">[http://rk.karelia.ru/special-projects/uroki-karelskogo/kalevala/ Сетевое издание Информационное агентство «Республика». Калевала] {{ref-ru}}</ref>).
 
 == Веленть лемденть  ==
 
@@ -102,6 +103,11 @@ File:Vuokkiniemi Finno-Ugric Capital of Culture 20170107 Karelian Museum exhibit
 File:Vuokkiniemi Finno-Ugric Capital of Culture 2017 01 07 Karelian Museum exhibition2.jpg|Карелэнь музей Велень Кудосо.
 File:Vuokkiniemi Finno-Ugric Capital of Culture 2017 01 07 Karelian Museum exhibition4.jpg|Карелэнь музей Велень Кудосо.
 </gallery>
+
+== Литература ==
+* Оленев,И.В. Карельский край и его будущее в связи с постройкою Мурманской железной дороги : путевые очерки И. В. Оленева. – [Гельсингфорс : Фин. лит. о-во, 1917]. – 172, [3] с. : ил. [Фотографии и рис. карельских крестьянских изб и хоз. построек Кемского и Повенецкого уездов (д. Кимасозеро, Лувозеро, Минозеро и др.), а также собора в Кеми, церкви в д. Кима- созеро, поклонного креста вблизи с. Вокнаволок, могильных крестов на кладбище д. Лувозеро]. – С. 32, 58, 59, 71, 74–76, 90, 92, 105, 109, 110, 113, 140, 143, 148–151.
+* Карелия : энциклопедия. В 3 т. Т. 1. А–Й / [ред. совет: С. Л. Катанандов и др. ; редкол.: А. Ф. Титов (гл. ред.) и др.]. – Петрозаводск : ПетроПресс, 2007. – 397, [1] с. : ил. – ISBN 978-5-8430-0121-6. Большая Сельга, деревня / В.П.Орфинский, И.Е.Гришина, И.А.Чернякова. – С.175; Великая Губа, село / А. С. Литвин. – С. 196; Вешкелица, село / А. С. Литвин. – С. 209–210; Вирма, село / А.С.Литвин. – С.212–213; Вокнаволок, деревня / А.С.Литвин. – С.226; Вороний Остров, деревня / И. Е. Гришина. – С. 229–230; Гридино, село / П. П. Медведев. – 279; Деревни традиционные / В. П. Орфинский, И. Е. Гришина. – С. 299–300; Импилахти, поселок / А. А. Рагозина. – С. 369.
+* Материалы свода памятников истории и культуры РСФСР : (памятники культуры). Карельская АССР / М-во культуры РСФСР ; Науч.-исслед. ин-т культуры ; М-во культуры Карел. АССР. – М., 1977. – 178 с. : ил. – (Тр., 58). Дом, в котором жил геолог В. М. Тимофеев. Город Петрозаводск, ул. Л. Толстого, 17. – С. 44–47; Бывшее здание Олонецкого губернского Совета [дом начальника Олонецкого горного управления], в котором работал врач М. Н. Завадовский. Город Петрозаводск, ул. Энгельса, 11. – С. 51–53; Дом, в котором жил сказочник Ф. П. Господарев. Город Петрозаводск, ул. Мало- Слободская, 45. – С. 89–91; Дом, в котором жила сказительница М. М. Хотеева. Поселок Калевала, ул. М. Михеевой (бывш. Заводская), 9. – С. 119–120; Дом, в котором жила скази- тельница М. А. Ремшу. Пустошь Касколя (в 2 км от села Вокнаволок по дороге на Ладвозеро). – С. 121–122; Здание бывш. Бородинской станции (дом купца В. Ершова), в которой работал биолог Б. В. Перфильев. Село Кончезеро, ул. Студенческая, 9. – С. 130–131; Дом, в котором жил и работал художник В. Н. Попов. Село Царевичи. – С. 156–158; Дом, в котором жил сказочник В. А. Гордеев. Деревня Чернаволок. – С. 159–161; Дом, в котором жила сказитель- ница А. М. Пашкова. Село Семеново. – С. 165–166.
 
 == Лисьм.: ==
 <references />
