*Empty MediaWiki Message*

--- a/Мишкинэнь_буе_(Башкортостан).mw
+++ b/Мишкинэнь_буе_(Башкортостан).mw
@@ -16,7 +16,7 @@
  | CoordScale                     = 
  | Статус                         = [[Муниципальной буе]]
  | Ашти                           = [[Башкирия Республикась|Башкириясо]]
- | Включает                       = 17 велеять
+ | Включает                       = 17 велен
  | Прявтош                        = [[Мишкино  веле]]
  | Образование                    = [[1930 ие]]
  | Упразднение                    = 
