*Empty MediaWiki Message*

--- a/Мишкинэнь_буе_(Башкортостан).mw
+++ b/Мишкинэнь_буе_(Башкортостан).mw
@@ -16,8 +16,8 @@
  | CoordScale                     = 
  | Статус                         = [[Муниципальной буе]]
  | Ашти                           = [[Башкирия Республикась|Башкириясо]]
- | Включает                       = 17 велен
- | Прявтош                        = [[Мишкино  веле]]
+ | Включает                       = 17 велеть
+ | Прявтош                        = [[Мишкино (Башкортостан)|Мишкино]] веле
  | Образование                    = [[1930 ие]]
  | Упразднение                    = 
 |Глава                            = 
@@ -42,7 +42,7 @@
  | Название параметра1            = [[ОКАТО]]
  | Параметр1                      = {{ОКАТО|80243000000}}
 }}
-'''Ми́шкинэнь буе''' ({{lang-ba|Мишкә районы}}, {{lang-ru|Мишкинский район}} ) — те муниципальной буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. Куншка таркась  — Мишкино веле.
+'''Ми́шкинэнь буе''' ({{lang-ba|Мишкә районы}}, {{lang-ru|Мишкинский район}} ) — те муниципальной буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. Куншка таркась  — [[Мишкино (Башкортостан)|Мишкино]] веле.
 
 == Эриця раськень==
 {{ Население | Мишкинский район (Башкортостан) | Столбцов=6}}
