*Empty MediaWiki Message*

--- a/Инешкипаз.mw
+++ b/Инешкипаз.mw
@@ -1,6 +1,4 @@
-'''Ине́шкипаз (Инешки - {{lang-ru|Всевышний}}, {{lang-ar|<big>الله</big>}}, Паз - {{lang-ru|Бог}}, {{lang-en|God}}, Шкай - {{lang-ru|Творец}}, {{lang-en|Creator}})''' —  [[Эрзя|эрзянь]] [[эрзянь кель|кель]]сэ ломантнь ине Паз, Модамасторонь теиця. Инешкипаз валось лиси колмо валсто — "[[Ине|ине]]" (покш), "шки" (шкамс-теемс - шкиця) ды "[[Паз|паз]]".
-
-Весе ломанть, весе эрзянь ломанть - [[казакт|вольной ломанть]] Инешкипазень олясто. Весе ломанть, весе эрзянь ломанть - Инешкипазень эйкакшт.
+'''Ине́шкипаз (Инешки, Паз, Шкай)''' —  [[Эрзя|эрзянь]] ине Паз, Модамасторонь теиця. Инешкипаз валось лиси колмо валсто — "[[Ине|ине]]" (покш), "шки" (шкамс-теемс - шкиця) ды "[[Паз|паз]]".
 
 Инешкипазось вейке. 
 Эрзятне мерить Тензэ Инешкипаз, Нишкепаз, Нишке. Мезе Тонь лемсэть? Мезесь ашти Ванстомакс эрзятнень туртов? 
@@ -19,6 +17,6 @@
 2000 иеть, Модамасторонть лангсо азорксчинть саить Авраам Пазмариенть пазнэнь кемема аравтомазо. Авраам Пазмариенть пельде састь истят Пазнэнь кемематне кода Иудаизма, Христианства, Ислам. Авраамонь панжовксонзо нежетекс нама ульнесть седе кезэрень Египетэнь, Шумерень пазнэнь кемема ундокстнэ. Тесэ тешкстасынек сень Библиянть ундоксонзо, лувозо, тешкстазь Шумерень сёвонень сёрмадовкстнэсэ. Секскак меремс те ансяк Авраамонь пельде сазь панжовксось, ули покш ильведьксэкс. Мекс бути стувтовить лия раськетнень Чилисема ёнксонь,Пелеве ды чиньэлькс Американь, Европань пелевеёнксонь, раськетнень ёвтамост, ды пазнэнь кемема лувост. Тешкстасынек сень Авраам Пазмариенть пельде лисезь пазнэнь кемематнеде башка, лията оймеёжомарямочинь
 ды пазнэнь кемемань лувтнэ яволявтовить авидекс. Мейсэ тувталось? Косо видечись, адядо вейсэ арсесынек, паряк видечинть мусынек.
 
-Ван. [[Исус Христос]], [[Аллах]], [[пазт]]
 
 [[Category:Мифология]]
+[[Category:Пазт]]
