--- a/Толлорека_веле.mw
+++ b/Толлорека_веле.mw
@@ -40,7 +40,7 @@
  |высота центра ЭТ        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               =  2<ref>[http://fulltext.library.karelia.ru/cgi-bin/ftretrans.pl?djwuuQHy9yRNJDSmcjY7xCPsNEAMO0TUNs7aYxzSVTtOTZ1eVuYXHZuHDwX6zGf9O5RjJ1vizcR8ltPsXF261OJq9sOrly5yoAYsb5yH+uV6H5ziiFuW2gCGFARL9m7DxcRjRQMnMsa3sBPGT+e2vlAoj51p344rUBs6uGuivDa2JLRbV/5FPLMTlwdjgnSDz2jc1xPrcIhHVHk0edPzqyd99foptw8hHOEv Численность населения в разрезе сельских населённых пунктов Республики Карелия по состоянию на 1 января 2013 года.] {{ref-ru}}</ref>
+  |эрицятне               =  2<ref name="Численность населения">[http://fulltext.library.karelia.ru/cgi-bin/ftretrans.pl?djwuuQHy9yRNJDSmcjY7xCPsNEAMO0TUNs7aYxzSVTtOTZ1eVuYXHZuHDwX6zGf9O5RjJ1vizcR8ltPsXF261OJq9sOrly5yoAYsb5yH+uV6H5ziiFuW2gCGFARL9m7DxcRjRQMnMsa3sBPGT+e2vlAoj51p344rUBs6uGuivDa2JLRbV/5FPLMTlwdjgnSDz2jc1xPrcIhHVHk0edPzqyd99foptw8hHOEv Численность населения в разрезе сельских населённых пунктов Республики Карелия по состоянию на 1 января 2013 года.] {{ref-ru}}</ref>
   |год переписи           = 2013
   |плотность              = 
   |агломерация            = 
@@ -59,18 +59,29 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Толлорека веле''' ({{lang-krl|Tollonjoki<ref name="Vuokkiniemi-Seura ry">[https://vuokkiniemiseura.wordpress.com/tag/capital-of-culture/ Vuokkiniemi-Seura ry. Vuokkiniemi will be a Finno-urgic Capital of Culture 2017] {{ref-en}}</ref>}}, {{Lang-ru|д. Толлорека}}) — те [[карелэть|карелэнь]] веле [[Костомукшань кужомастор|Костомукшань ошонь кужомасторсо]], [[Карелэнь Республикась|Карелэнь Республикань]].
+'''Толлорека веле''' ({{lang-krl|Tollonjoki<ref name="Vuokkiniemi-Seura ry">[https://vuokkiniemiseura.wordpress.com/tag/capital-of-culture/ Vuokkiniemi-Seura ry. Vuokkiniemi will be a Finno-urgic Capital of Culture 2017] {{ref-en}}</ref><ref name="juminkeko"/>}}, {{Lang-ru|д. Толлорека}}) — те [[карелэть|карелэнь]] веле [[Костомукшань кужомастор|Костомукшань ошонь кужомасторсо]], [[Карелэнь Республикась|Карелэнь Республикань]].
 
 == Веледенть ==
 Ашти [[Толлойоки]] лей чиресэ, [[Костомукша ош]] — [[Вокнаволок веле|Вокнаволок]] автоардомаванть лангсо.
+Содави, кода '''рунаньморыця веле''', кона сюлмавозь [[Лённрот Элиас]]<ref name="juminkeko">[http://www.juminkeko.fi/viena/tollonjoki.html juminkeko//Tollonjoki] {{ref-fi}}</ref> марто, сон тесэ сёрмадынзе [[«Калевала» морокерькс|Калевалас]] ламо рунатнень. 
+
+
+== Эрицятнеде ==
+{|class="wikitable sortable"
+|-
+! scope="col" style="width:50px;"|'''2009<ref name="Рекомендуемая нормативная">[http://metod.library.karelia.ru/files/normy_bibliotek.pdf Рекомендуемая нормативная сеть и формы библиотечного обслуживания с указанием численности населения на 1 января 2009 года по данным Карелиястата.] {{ref-ru}}</ref>''' 
+! scope="col" style="width:50px;"|'''2010<ref name="Всероссийская перепись">[http://krl.gks.ru/wps/wcm/connect/rosstat_ts/krl/resources/dda916004ee2886182b1833467c8ff84/2_Сельские+населенные+пункты+РК.docx Всероссийская перепись населения 2010 года. Сельские населённые пункты Республики Карелия] {{ref-ru}}</ref>''' 
+! scope="col" style="width:50px;"|'''2013<ref name="Численность населения"/>''' 
+|-
+| scope="row" |2
+|→2
+|→2
+|}
 
 == Веленть лемденть  ==
 
 == Содавикс ломанть те велестэнть ==
 Толлорека велесэ чачсть:
-==Веленть эрямозо==
-== Фотокувт ==
-== Литература ==
 
 == Лисьм.: ==
 <references />
