*Empty MediaWiki Message*

--- a/Бижбуляконь_буе.mw
+++ b/Бижбуляконь_буе.mw
@@ -46,7 +46,9 @@
 '''Бижбуляконь буе''' ({{lang-ru|Бижбулякский район}}, {{lang-ba|Бишбүләк районы}}) — те буе лембе-чивалгома ёно [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. 
 
 Куншка ошось - [[Бижбуляк веле]]. 
+== Эриця раськеть==
 
+{{ Эрицятне  | Бижбулякский район | Столбцов=8}}
 == Бижбуляконь буень велеть ==
 
 
