Откат правок [[Special:Contributions/31.173.101.231|31.173.101.231]] ([[User talk:31.173.101.231|обсуждение]]) к версии [[User:Escarbot|Escarbot]]

--- a/Киртянь_валт.mw
+++ b/Киртянь_валт.mw
@@ -1,4 +1,4 @@
-'''[[Киртянь]] валт''', конёв лангсо сёрмадозь, вирьтне прядовить, сельмесь сизи. Секскак койкона стилсэ нолдыть тевс зярыя тештинестэ теезь киртянь хвормат.
+'''Киртянь валт''', конёв лангсо сёрмадозь, вирьтне прядовить, сельмесь сизи. Секскак койкона стилсэ нолдыть тевс зярыя тештинестэ теезь киртянь хвормат.
 
 ==Сёрмалевкс==
 * [[Атяньчи|Атя.]] — "''атяньчи''" лиякс пондельник
