*Empty MediaWiki Message*

--- a/Кигинэнь_буе.mw
+++ b/Кигинэнь_буе.mw
@@ -2,8 +2,8 @@
  | Цвет1                          = {{Цвет|Россия}}
  | Эрзянь лем                     =  Кигинэнь буе
  | Эсьлем                         = {{lang-ba|Ҡыйғы районы}}
- | Герб                           = Coat of Arms of Kiginskiy rayon.png
- | Коцт                           = Flag of Kiginskiy rayon.svg
+ | Герб                           = 
+ | Коцт                           = 
  | Гимн                           = 
  | Мастор                         = {{RUS}}
  | lat_dir                        = 
