--- a/Суднозеро_веле.mw
+++ b/Суднозеро_веле.mw
@@ -3,7 +3,7 @@
  |статус                  = веле
  |Эрзянь лем              = Суднозеро веле
  |оригинальное название   ={{lang-krl|Venehjärvi}}
- |изображение             =  
+ |изображение             = Venehjarvi.jpg
  |подчинение              = 
  |мастор                  = Россия
  |герб                    = 
